--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     volumes: 
       - ./containers/mssql/init.sql:/docker-entrypoint-initdb.d/init.sql
   pgsql:
-    image: postgres:13.4
+    image: postgres
     ports:
       - 5432:5432
     volumes:
