--- a/src/default.conf
+++ b/src/default.conf
@@ -2,7 +2,9 @@ server {
     index index.php index.html;
     server_name localhost;
     root /var/www/html;
-    
+
+    autoindex on;
+
     location / {
         try_files $uri $uri/ /404.php;
     }
