--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,9 @@ services:
     volumes:
       - ./containers/php/php.ini:/usr/local/etc/php/php.ini
       - ./src/code/:/var/www/html
+  hhi:
+    image: php:5.3.29-apache
+    ports:
+      - "18081:80"
+    volumes:
+      - ./src/hhi/:/var/www/html
