perf(hhi): HTTP Header injectionがsameoriginに置けました。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./containers/php/php.ini:/usr/local/etc/php/php.ini
       - ./src/code/:/var/www/html
   hhi:
-    image: php:5.3.29-apache
+    image: nouphet/docker-php4
     ports:
       - "18081:80"
     volumes:
