--- a/src/default.conf
+++ b/src/default.conf
@@ -2,8 +2,11 @@ server {
     index index.php index.html;
     server_name localhost;
     root /var/www/html;
-
     autoindex on;
+    
+    location ^~ /hhi/ {
+        proxy_pass http://hhi/;
+    }
 
     location / {
         try_files $uri $uri/ /404.php;
