perf(hhi): http header injectionをsameoriginに置けた

--- a/src/default.conf
+++ b/src/default.conf
@@ -3,6 +3,10 @@ server {
     server_name localhost;
     root /var/www/html;
     
+    location ^~ /hhi/ {
+        proxy_pass http://hhi/;
+    }
+
     location / {
         try_files $uri $uri/ /404.php;
     }
